# B5203E-TSAF

./: README.md  pyproject.toml
W1/: L1_data_visualization.ipynb  L1_data_visualization_solutions.ipynb
W10/: hierarchical_forecasting.ipynb  hierarchical_forecasting_solutions.ipynb
W11/: ML_models_and_chronos_exercise.ipynb  cross_validation.ipynb  cross_validation_solutions.ipynb
W12/: foundational_models.ipynb
W2/: simple_models.ipynb  simple_models_solutions.ipynb
W3/: forecastability_indicators.ipynb  fourier_forecasts_and_regression.ipynb  fourier_forecasts_and_regression_solutions.ipynb  outlier_detection_in_TS.ipynb
W4/: Embeddings_and_takens_theorem.ipynb  Embeddings_and_takens_theorem_solutions.ipynb  fourier_forecasts_and_regression_pt2.ipynb  fourier_forecasts_and_regression_pt2_solutions.ipynb
W5/: exponential_smoothing_implementation.ipynb  exponential_smoothing_implementation_solutions.ipynb
W6/: kalman_filter_exercise.ipynb  kalman_filter_exercise_solutions.ipynb
W7/: arima_models.ipynb  arima_models_solutions.ipynb
W9/: conformal_predictions.ipynb  conformal_predictions_solutions.ipynb
