[project]
name = "b5203e-tsaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
