[project]
name = "b5203e-tsaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antropy>=0.1.9",
    "anywidget>=0.9.18",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "mlforecast>=1.0.2",
    "nolds>=0.6.2",
    "notebook>=7.4.5",
    "ordpy>=1.2.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "utilsforecast>=0.2.12",
]
